--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="robots" content="noindex">
 		<title>Sandra Nyström</title>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="dist/app.css" type="text/css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>	
 	<body>
 		<header class="header">
@@ -23,7 +25,7 @@
 							</svg>
 							<span>About me</span>
 						</h3>
-						<p class="me__description">My name is Sandra Nyström. I'm working as a web developer and I'm mainly focusing on backend services. I believes that the most important aspects of software development is to put the user in the centre of the design process. I thrives for new technologies and likes taking on the challenge of learning new languages and tools.
+						<p class="me__description">My name is Sandra Nyström. I'm working as a web developer, mainly focusing on backend related services. I believe that the most important aspects of software development is to put the user in the centre of the design process. I thrive for new technologies and taking on the challenge of learning new languages and tools.
 						</p>
 						<p>Phone: 0046 7016 534 60</p>
 						<p>Email: <a href="mailto:sandra.nystrom9@gmail.com">sandra.nystrom9@gmail.com</a></p>
@@ -33,7 +35,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="section">
+			<div class="section page_break">
 				<h3 class="section__title">
 					<svg height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
     					<path d="M0 0h24v24H0z" fill="none"/>
@@ -59,7 +61,17 @@
     					<path d="M20 6h-4V4c0-1.11-.89-2-2-2h-4c-1.11 0-2 .89-2 2v2H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-6 0h-4V4h4v2z"/>
 					</svg>
 					<span>Work experience</span>
-					</h3>
+				</h3>
+				<div class="project">
+					<h4 class="project__title">Valtech Sweden, Stockholm</h4>
+					<p class="project__date">January 2012 – Ongoing</p>
+					<div class="fact">
+						<p class="project__descrtiption">
+							Valtech is one of the leading web consultancy firms in Stockholm. After taking their trainee program I worked with several well known clients including:
+						</p>
+					</div>
+				</div>
+				<hr/>
 				<div class="project">
 					<h4 class="project__title">Svensk Fastighetsförmedling – External website</h4>
 					<p class="project__date">December 2012 – Ongoing</p>
@@ -71,7 +83,7 @@
 					<p class="project__technoloy"><b>Technologies:</b> .Net, C#, SQL, WCF, EPiServer, ElasticSearch, RabbitMQ</p>
 				</div>
 				<hr/>
-				<div class="project">
+				<div class="project page_break">
 					<h4 class="project__title">Svensk Fastighetsförmedling – CRM System</h4>
 					<p class="project__date">December 2012 – Ongoing</p>
 					<div class="fact">
@@ -103,7 +115,7 @@
 					</div>
 				</div>
 				<hr/>
-				<div class="project">
+				<div class="project page_break">
 					<h4 class="project__title">Kammarkollegiet</h4>
 					<p class="project__date">September 2012 – December 2012</p>
 					<div class="fact">
@@ -125,7 +137,7 @@
 					<p class="project__technoloy"><b>Technologies: </b>.Net, C#, EPiServer, MongoDB</p>
 				</div>
 			</div>
-			<div class="section">
+			<div class="section page_break">
 				<h3 class="section__title">
 					<svg height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
     					<path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"/>
@@ -142,6 +154,14 @@
 					<h4 class="skill__header">Web</h4>
 					 <p class="extra-line-hight">RabbitMQ, ElasticSearch, SQL Server, Episerver</p>
 					 <p class="extra-line-hight">React.js, Flux, SCSS/CSS, Webpack, Gulp</p>
+				</p>
+				<p>
+					<h4 class="skill__header">Mobile</h4>
+					Windows Phone
+				</p>
+				<p>
+					<h4 class="skill__header">Methodologies</h4>
+						Scrum, Kanban, TDD
 				</p>
 				<p>
 					<h4 class="skill__header">Misc</h4>
