Styled and add new projects

--- a/img/index.html
+++ b/img/index.html
@@ -120,7 +120,7 @@
 						<p class="project__date">December 2012 – Mars 2016</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								Brokers use the CRM system on a daily basis to manage exhibitions, biddings as well as finding potential buyers. One of the things that I really enjoyed when rebuilding the system was the user-centric design process. It was great fun to see that what we did really helped the brokers and made their work more fun and efficient.
+								Brokers use the CRM system on a daily basis. They spend a lot of time in the system, so it’s important that the system is fast and easy to use. The system itself contains functions that helps them to manage exhibitions, biddings as well as finding potential buyers. One of the things that I really enjoyed when rebuilding the system was the user-centric design process. It was great fun to see that what we did really helped the brokers and made their work more fun and efficient.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies: </b>.Net, C#, SQL, WCF, ElasticSearch, RabbitMQ</p>
@@ -130,7 +130,7 @@
 						<p class="project__date">December 2012 – Mars 2016</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								We designed and built a new social intranet for the 2000 brokers at Svensk Fastighetsförmedling. The brokers have their own profile where they can post, comment, analyze the customer satisfaction, get sales statistics and more. The service was built based on the EpiServer CMS, and <a href="http://www.mynewsdesk.com/se/svensk_fastighetsformedling/news/svensk-fastighetsfoermedling-fick-utmaerkelsen-sveriges-baesta-intranaet-84288">it won a price in 2014 for the best intranet in Sweden</a>.
+								In this project, we designed and built a new social intranet for the brokers. Svensk Fastighetsförmedling has about 2000 brokers scattered all over the country. It’s important that the brokers communicate, share insights and can get information from their head office. The brokers have their own profile where they can post, comment, analys the customer satisfaction, get sales statistics and more. The service was built based on the EpiServer CMS. <a href="http://www.mynewsdesk.com/se/svensk_fastighetsformedling/news/svensk-fastighetsfoermedling-fick-utmaerkelsen-sveriges-baesta-intranaet-84288">It won a price 2014 for best intranet.</a>
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies: </b>.Net, C#, EPiServer, CSS, JavaScript</p>
@@ -149,7 +149,7 @@
 						<p class="project__date">September 2012 – December 2012</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								Kammarkollegiet is a government agency responsible for supporting framework agreements for other agencises in Sweden. For that purpose they have established the site <a href="http://www.avropa.se/">avropa.se</a>. The goal was to make the system easier to use, both for the end users as well as the editors.
+								Kammarkollegiet is a Government agency responsible for supporting framework agreements for all state agencises in Sweden. For that purpose they have established the site <a href="http://www.avropa.se/">avropa.se</a>. The goal was to make the system easier to use, both for the end users as well as the editors.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies: </b>.Net, C#, EPiServer, CSS, JavaScript</p>
