--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
 							<h3 class="section__title">
 							About me
 							</h3>
-							<p class="me__description">My name is Sandra Nyström. I'm currently working as a software engineer in Munich, Germany, but I will move to Seattle in March this year. 
+							<p class="me__description">My name is Sandra Nyström, and I'm a software engineer. I'm currently working in Germany, but I will be relocating to Seattle in March this year. 
 
-							I believe that putting the user in the centre of the design process is one of the most important aspects of software development. 
-
-							I believe that the most important aspect of software development is to put the user in the centre of the design process and then work backwards from there. 
-
-							I love the challenge of learning new tools and technologies.
 							</p>
-							<p>Phone:</p>
-							<p>Email: <a href="mailto:sandra.nystrom9@gmail.com">sandra.nystrom9@gmail.com</a></p>
+
+							<p>
+								Phone: +49 151 1853 0951<br />
+								Email: <a href="mailto:sandra.nystrom9@gmail.com">sandra.nystrom9@gmail.com</a>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -78,7 +76,7 @@
 							Audi is one of the biggest car manufacturers in the world. Audi is developing a new <a href="http://www.audi.com/en/myaudi.htm">app platform</a> for their upcoming cars, and our team is responsible for building the official apps for that platform. We have built apps like maps, news and weather.
 							</p>
 							<p class="project__descrtiption">
-							As part of this project, I helped improving the architecture to allow UI components to be shared an re-used between views. I also coached the team to raise the overall code quality by introducing a consistent code style and to follow best-practices from <a href="https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882" target="_blank">Clean Code</a>.
+							As part of this project, I helped improving the architecture to allow UI components to be shared and reused between views. I also coached the team to raise the overall code quality by introducing a consistent code style and to follow best-practices from <a href="https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882" target="_blank">Clean Code</a>.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies:</b> JavaScript, Require.js, Gulp, Eslint, Jasmine
@@ -110,7 +108,10 @@
 						<p class="project__date">December 2012 – Mars 2016</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								<a href="http://www.svenskfast.se/">Svensk Fastighetsförmedling</a> is one of the largest real estate agencies in Sweden. On Svenskfast.se users can for example see properties that are for sale and create listing subscriptions. Svenskfast.se is designed and built in a service oriented manner to make it easy to add new features as well as maintaining existing ones. This approach has several other advantages such as scale and testability to name a few. My role in the project involves everything related to the backend services.
+								<a href="http://www.svenskfast.se/">Svensk Fastighetsförmedling</a> is one of the largest real estate agencies in Sweden. I worked on the team that was building and maintaining their website, which is one of the most popular websites in the country. The website was designed in a service oriented manner, and the load was spread over multiple machines and databases.
+							</p>
+
+							<p class="project__descrtiption">I was working throughout the stack covering everything from user interfaces to background jobs. I gained a lot of trust among my peers due to my broad knowledge on how the services were working, how they were interconnected and how they affected each other. 
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies:</b> .Net, C#, SQL, WCF, EPiServer, ElasticSearch, RabbitMQ</p>
@@ -130,7 +131,7 @@
 						<p class="project__date">December 2012 – Mars 2016</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								We designed and built a new social intranet for the 2000 brokers at Svensk Fastighetsförmedling. The brokers have their own profile where they can post, comment, analyze the customer satisfaction, get sales statistics and more. The service was built based on the EpiServer CMS, and <a href="http://www.mynewsdesk.com/se/svensk_fastighetsformedling/news/svensk-fastighetsfoermedling-fick-utmaerkelsen-sveriges-baesta-intranaet-84288">it won a price in 2014 for the best intranet in Sweden</a>.
+								We designed and built a new social intranet for the 2000 brokers at Svensk Fastighetsförmedling. The brokers could analyze the customer satisfaction, get sales statistics and more. The service was built based on the EpiServer CMS, and <a href="http://www.mynewsdesk.com/se/svensk_fastighetsformedling/news/svensk-fastighetsfoermedling-fick-utmaerkelsen-sveriges-baesta-intranaet-84288">it won a price in 2014 for the best intranet in Sweden</a>.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies: </b>.Net, C#, EPiServer, CSS, JavaScript</p>
@@ -149,7 +150,7 @@
 						<p class="project__date">September 2012 – December 2012</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								Kammarkollegiet is a government agency responsible for supporting framework agreements for other agencises in Sweden. For that purpose they have established the site <a href="http://www.avropa.se/">avropa.se</a>. The goal was to make the system easier to use, both for the end users as well as the editors.
+								Kammarkollegiet is a government agency responsible for supporting framework agreements for other agencies in Sweden. For that purpose they have established the site <a href="http://www.avropa.se/">avropa.se</a>. The goal was to make the system easier to use, both for the end users as well as the editors.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies: </b>.Net, C#, EPiServer, CSS, JavaScript</p>
@@ -189,7 +190,7 @@
 					</p>
 					<p>
 						<h4 class="skill__header">Misc</h4>
-						<p class="extra-line-hight"> Git, Teamcity, Jenkins, Octupus, <br/>
+						<p class="extra-line-hight"> Git, Teamcity, Jenkins, Octopus, <br/>
 						AWS (S3, Route 53, CloudFront, Elastic Beanstalk)
 						</p>
 					</p>
