--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 							About me
 							</h3>
 							<p class="me__description">My name is Sandra Nyström, and I'm a software engineer. I'm currently working in Germany, but I will be relocating to Seattle in March this year. 
+							</p>
 
+							<p class="me__description">
+							When I’m at my best I work in a team that puts the user in the centre of the development process. I love learning and I always look for new ways to improve myself to become a better engineer. 
 							</p>
 
 							<p>
@@ -44,14 +47,14 @@
 					<h3 class="section__title">
 						Education
 					</h3>
-					<ul class="educations">
+					<ul class="educations fact">
 						<li class="education">
 							<h4 class="educations__subtitle">2012 </h4>
-							<p class="education__info">Master in Computer science, Uppsala university, Sweden</p>
+							<p class="education__info">Master in Computer science, Uppsala University, Sweden</p>
 						</li>
 						<li class="education">
 							<h4 class="educations__subtitle">2010 </h4>
-							<p class="education__info">Candidate in Computer science, Uppsala university, Sweden</p>
+							<p class="education__info">Bachelor in Computer science, Uppsala University, Sweden</p>
 						</li>
 					</ul>	
 				</div>
@@ -64,7 +67,7 @@
 						<p class="project__date">Mars 2016 – Ongoing</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-									<a href="https://www.valtech.com/">Valtech</a> is a global consultancy with offices all around the world. The Munich office has a strong focus on the car and e-commerce industries. I worked with several well known clients including:
+									<a href="https://www.valtech.com/">Valtech</a> is a global consultancy firm with offices all around the world. The Munich office has a strong focus on the car and e-commerce industries. I worked with several well known clients including:
 							</p>
 						</div>
 					</div>
@@ -73,7 +76,7 @@
 						<p class="project__date">September 2016 – Ongoing</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-							Audi is one of the biggest car manufacturers in the world. Audi is developing a new <a href="http://www.audi.com/en/myaudi.htm">app platform</a> for their upcoming cars, and our team is responsible for building the official apps for that platform. We have built apps like maps, news and weather.
+							Audi is one of the biggest car manufacturers in the world. Audi is developing a new <a href="http://www.audi.com/en/myaudi.htm">app platform</a> for their upcoming cars, and our team is responsible for building the official apps for that platform. For example, we have built maps, news and weather apps.
 							</p>
 							<p class="project__descrtiption">
 							As part of this project, I helped improving the architecture to allow UI components to be shared and reused between views. I also coached the team to raise the overall code quality by introducing a consistent code style and to follow best-practices from <a href="https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882" target="_blank">Clean Code</a>.
@@ -82,13 +85,13 @@
 						<p class="project__technoloy"><b>Technologies:</b> JavaScript, Require.js, Gulp, Eslint, Jasmine
 					</div>
 					<div class="project">
-						<h4 class="project__title">BMG - website</h4>
+						<h4 class="project__title">BMG - Website</h4>
 						<p class="project__date">Mars 2016 – September 2016</p>
 						<div class="fact">
 							<p class="project__descrtiption">
 							<a href=”https://www.bmg.com/us/”>BMG</a> is an multinational music company that through their digital services helps artists and songwriters to publish and sell their music. Our team worked with a web based system where sellers could find music, build playlists and send these to potential customers. </p>
 							<p class="project__descrtiption">
-							One thing I did was to build the music browsing section. It allows users to get inspiration by finding new exciting music. I worked end-to-end on it, covering everything from querying the database to exposing a good looking user interface. After being released it got a great reception from the users. They really liked the new look and how easy it was to navigate.
+							I was responsible for the music browsing section. It allows users to get inspiration by finding new exciting music. I worked end-to-end on it, covering everything from querying the database to exposing a good looking user interface. After being released it got a great reception from the users. They  liked the new look and how easy it was to navigate.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies:</b>
@@ -108,10 +111,10 @@
 						<p class="project__date">December 2012 – Mars 2016</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								<a href="http://www.svenskfast.se/">Svensk Fastighetsförmedling</a> is one of the largest real estate agencies in Sweden. I worked on the team that was building and maintaining their website, which is one of the most popular websites in the country. The website was designed in a service oriented manner, and the load was spread over multiple machines and databases.
+								<a href="http://www.svenskfast.se/">Svensk Fastighetsförmedling</a> is one of the largest real estate agencies in Sweden. I worked on the team that was building and maintaining their website, which is one of the most popular websites in the country. The architecture was designed in a service oriented manner, and the load was spread over multiple machines and databases.
 							</p>
 
-							<p class="project__descrtiption">I was working throughout the stack covering everything from user interfaces to background jobs. I gained a lot of trust among my peers due to my broad knowledge on how the services were working, how they were interconnected and how they affected each other. 
+							<p class="project__descrtiption">I was working throughout the stack covering everything from user interfaces to background jobs. I gained a lot of trust among my peers due to my broad knowledge on how the services were working, how they were interconnected and how they affected each other.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies:</b> .Net, C#, SQL, WCF, EPiServer, ElasticSearch, RabbitMQ</p>
@@ -121,7 +124,7 @@
 						<p class="project__date">December 2012 – Mars 2016</p>
 						<div class="fact">
 							<p class="project__descrtiption">
-								Brokers use the CRM system on a daily basis to manage exhibitions, biddings as well as finding potential buyers. One of the things that I really enjoyed when rebuilding the system was the user-centric design process. It was great fun to see that what we did really helped the brokers and made their work more fun and efficient.
+							Brokers use the CRM system on a daily basis to manage exhibitions, biddings as well as finding potential buyers. One of the things that I really enjoyed when rebuilding the system was the user-centric design process. It was rewarding to see that what we did really helped the brokers and made their work more fun and efficient.
 							</p>
 						</div>
 						<p class="project__technoloy"><b>Technologies: </b>.Net, C#, SQL, WCF, ElasticSearch, RabbitMQ</p>
@@ -182,7 +185,7 @@
 					</p>
 						<p>
 						<h4 class="skill__header">Distributed system</h4>
-						 <p class="extra-line-hight">RabbitMQ, ElasticSearch, Kibana, SQL Server, PostgreSQL, Spring, Maven, akka</p>
+						 <p class="extra-line-hight">RabbitMQ, ElasticSearch, Kibana, SQL, Spring, Maven, akka</p>
 					</p>
 					<p>
 						<h4 class="skill__header">Methodologies</h4>
